--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,4 +11,7 @@
 <link rel="shortcut icon" href="/favicon.ico">
 
 <!-- RSS -->
-<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+{{ with .OutputFormats.Get "RSS" }}
+<link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title | default "" }}" />
+<link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title | default "" }}" />
+{{ end }}
