--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <title> {{ .Title }} &middot; {{ .Site.Title }} </title>
 
+<!-- Meta -->
+<meta name="mastodon" rel="me" href="{{ .Site.Params.mastodon }}" />
+<meta name="google-site-verification" content="{{ .Site.Params.GoogleSiteVerification }}" />
+
 <!-- CSS -->
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/slim.css">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.min.css">
