--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -86,8 +86,7 @@ a {
     text-decoration: underline; }
 
 em {
-  text-emphasis-style: circle;
-  text-emphasis-position: under; }
+}
 
 code {
   font-family: 'Source Code Pro', Monaco, Courier, monospace;
