Add more sites to the menu

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,12 +8,14 @@
     <ul class="nav-list">
       {{ range .Site.Menus.main }}
       <li><a href="{{ .URL }}">{{ .Name }}</a></li>
-      {{end}} 
+      {{end}}
 	  <li class="spacer">&ac;</li>
 {{ with .Site.Params.GithubID }}
-      <li><a href="https://github.com/{{.}}">Github</a></li>{{ end }} {{ with .Site.Params.TwitterID }}
+      <li><a href="https://github.com/{{.}}">Github</a></li>{{ end }} {{ with .Site.Params.MastodonId }}
+      <li><a href="https://mastodon.radio/{{.}}">Mastodon</a></li>{{ end }} {{ with .Site.Params.TwitterID }}
       <li><a href="https://twitter.com/{{.}}">Twitter</a></li>{{ end }} {{ with .Site.Params.LinkedInID }}
-      <li><a href="http://linkedin.com/in/{{.}}">LinkedIn</a></li>{{ end }}
+      <li><a href="http://linkedin.com/in/{{.}}">LinkedIn</a></li>{{ end }} {{ with .Site.Params.QRZID }}
+      <li><a href="https://www.qrz.com/db/{{.}}">QRZ</a></li>{{ end }}
     </ul>
   </div>
 </div>
