--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -178,8 +178,11 @@ button,
 .site-title {
   font-size: 1.5rem;
   font-weight: 700; }
-  .site-title a {
+.site-title a {
     color: #333; }
+
+.site-tagline {
+    color: #ae1d1d; }
 
 .nav {
   position: absolute;
@@ -338,7 +341,8 @@ button,
     right: -3px; }
 
 .post-date {
-  color: #ccc;
+  color: #ae1d1d;
+  opacity: 0.8;
   font-size: 14px;
   margin-top: -25px;
   display:block;
@@ -350,7 +354,8 @@ button,
 /* styling for tags on homepage */
 
 .post-tags {
-  color: #ccc;
+  color: #ae1d1d;
+  opacity: 0.8;
   display: block;
   font-size: 14px;
   position: relative;
@@ -361,6 +366,7 @@ button,
 }
 
 .post-tags a {
-	color: #ccc;
+  color: #ae1d1d;
+  opacity: 0.8;
 }
 
