--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -14,7 +14,6 @@ a {
 
 img {
   max-width: 100%;
-  margin: 1rem 0 0 1rem;
   border: 0;
   border-radius: 5px; }
 
@@ -110,8 +109,11 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   border-radius: 4px;
-  background-color: #f9f9f9; }
-
+  background-color: #f9f9f9; }"
+      title="Keyboard logo"
+      link="https://javl.github.io/image2cpp/"
+      alt="My custom logo, it's a left hand, face down, and the word 'lefty'"
+      >}}
 pre code {
   font-family: 'Source Code Pro', Menlo, Monaco, Courier, monospace;
   font-size: 0.7rem;
@@ -374,4 +376,14 @@ button,
 
 .site-title img {
   margin: 0;
+}
+
+figure {
+  width: 90%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  margin: 0.5em;
+  padding: 0.5em;
 }
