--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,6 +9,9 @@
   <div class="container">
     {{ partial "header.html" . }}
     <div class="content">
+      <div class="extra">
+        {{ .Content }}
+      </div>
       <div class="posts">
         {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }} {{ range $paginator.Pages }}
         <div class="post">
