--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,9 @@
   <div class="container">
     {{ partial "header.html" . }}
     <div class="content">
+      <div class="extra">
+        {{ .Content }}
+      </div>
       <div class="posts">
         {{ $paginator := .Paginate (where site.RegularPages "Type" "in" site.Params.mainSections) }} {{ range $paginator.Pages }}
         <div class="post">
