Add video shortcode and SVG logo support

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,7 @@
 <div class="header">
-  <h1 class="site-title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.Params.Logo }}"/></a></h1>
+  <h1 class="site-title"><a href="{{ .Site.BaseURL }}">
+    <object type="image/svg+xml" data="{{ .Site.Params.Logo }}"></object>
+  </a></h1>
   <p class="site-tagline">{{ .Site.Params.Subtitle }}</p>
   <div class="nav">
     <a class="nav-btn" href="#">
